# agents2026

./: .gitignore  README.md
tutorials/: .env.example  .gitignore
tutorials/01_what_is_rag/: 01_what_is_rag.ipynb  01_what_is_rag_explanation.md  _build_notebook.py  pyproject.toml
tutorials/01_what_is_rag/slides/: index.html
tutorials/02_embeddings/: 02_embeddings.ipynb  02_embeddings_explanation.md  _build_notebook.py  pyproject.toml
tutorials/02_embeddings/slides/: index.html
tutorials/03_similarity_search/: .gitignore  03_similarity_search.ipynb  03_similarity_search_explanation.md  _build_notebook.py  pyproject.toml
tutorials/03_similarity_search/slides/: index.html
tutorials/04_chunking_corpus/: 04_chunking_corpus.ipynb  04_chunking_corpus_explanation.md  _build_notebook.py  pyproject.toml
tutorials/04_chunking_corpus/slides/: index.html
tutorials/05_first_real_rag/: .gitignore  05_first_real_rag.ipynb  05_first_real_rag_explanation.md  _build_notebook.py  pyproject.toml
tutorials/05_first_real_rag/frozen/: rag_answer.json
tutorials/05_first_real_rag/slides/: index.html
tutorials/06_why_evaluate/: 06_why_evaluate.ipynb  06_why_evaluate_explanation.md  _build_notebook.py  golden_questions.json  pyproject.toml
tutorials/06_why_evaluate/corpus/: 01_spot_price_and_quotes.md  03_silver_and_industrial_demand.md  04_platinum_palladium.md  06_drivers_and_macro.md  07_risk_and_portfolio.md  08_futures_and_derivatives.md
tutorials/06_why_evaluate/frozen/: sample_dataset.json
tutorials/06_why_evaluate/slides/: index.html
tutorials/07_retriever_metrics/: .gitignore  07_retriever_metrics.ipynb  07_retriever_metrics_explanation.md  _build_notebook.py  pyproject.toml
tutorials/07_retriever_metrics/frozen/: eval_dataset.jsonl  retriever_scores.json
tutorials/07_retriever_metrics/slides/: index.html
tutorials/08_more_retriever_metrics/: 08_more_retriever_metrics.ipynb  08_more_retriever_metrics_explanation.md  _build_notebook.py  pyproject.toml
tutorials/08_more_retriever_metrics/corpus/: 05_investment_vehicles.md
tutorials/08_more_retriever_metrics/frozen/: step3_entity_recall.json  step4_noise_sensitivity.json
tutorials/08_more_retriever_metrics/slides/: index.html
tutorials/09_generator_metrics/: 09_generator_metrics.ipynb  09_generator_metrics_explanation.md  _build_notebook.py  pyproject.toml
tutorials/09_generator_metrics/frozen/: generator_scores.json
tutorials/09_generator_metrics/slides/: index.html
tutorials/_TEMPLATE/: EXPLANATION_OUTLINE.md  MODULE_SPEC.md  _build_notebook.py  pyproject.toml
tutorials/_TEMPLATE/slides/: index.html
tutorials/_assets/corpus/: 02_gold_fundamentals.md
