[project]
name = "asdrp-tutorial-module-04"
version = "0.1.0"
description = "ASDRP Agentic RAG Evaluation track — Module 04: Chunking & the Corpus."
requires-python = ">=3.13"
dependencies = [
    # Keyless local embedder (384-dim, downloads once then offline)
    "sentence-transformers",
    # Vector database — in-memory mode, no server required
    "qdrant-client",
    # Document splitting
    "langchain-text-splitters>=1.1.2",
    # LangChain core (Document dataclass used in explanation; qdrant-client direct in notebook)
    "langchain-core",
    # Jupyter tooling so `uv run jupyter lab` works out of the box
    "jupyterlab",
    "ipykernel",
]

# `uv sync` reads this file, creates a .venv, and installs the pinned set above.
# No [build-system] table: this is a tutorial project, not a package to publish,
# so uv treats it as a non-packaged workspace.
[tool.uv]
package = false
