[project]
name = "asdrp-tutorial-module-05"
version = "0.1.0"
description = "ASDRP Agentic RAG Evaluation track — Module 05: Stack migration + first real RAG."
requires-python = ">=3.13"
dependencies = [
    # Cloud Ollama chat + embeddings
    "langchain-ollama>=1.1.0",
    # LiteLLM provider bridge (used by later modules; imported here for env setup)
    "litellm>=1.89.2",
    # Qdrant vector store integration for LangChain
    "langchain-qdrant>=1.1.0",
    # Qdrant client (in-memory mode, no server needed)
    "qdrant-client>=1.18.0",
    # Text splitter (chunking)
    "langchain-text-splitters>=1.1.2",
    # Shared .env loading
    "python-dotenv>=1.2.2",
    # Jupyter tooling so `uv run jupyter lab` works out of the box.
    "jupyterlab",
    "ipykernel",
]

# `uv sync` reads this file, creates a .venv, and installs the pinned set above.
# No [build-system] table: this is a tutorial project, not a package to publish.
[tool.uv]
package = false
