[project]
name = "asdrp-tutorial-module-NN"
version = "0.1.0"
description = "ASDRP Agentic RAG Evaluation track — Module NN."
requires-python = ">=3.13"
dependencies = [
    # --- add ONLY what this module actually imports ---
    "python-dotenv",
    # Jupyter tooling so `uv run jupyter lab` works out of the box.
    "jupyterlab",
    "ipykernel",
]

# `uv sync` reads this file, creates a .venv, and installs the pinned set above.
# No [build-system] table: this is a tutorial project, not a package to publish,
# so uv treats it as a non-packaged workspace.
[tool.uv]
package = false
